fixed text not wrapping

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,7 @@ header h1 a:hover {
 }
 
 section{
+   
     width: 100%;
     background-color: var(--asparagus);
     padding: 10px;
@@ -83,5 +84,11 @@ height: 300px;
 #about-me{
     justify-content:space-between;
     flex-direction:row-reverse;
-    text-align:;
 }
+
+  @media screen and (min-width: 768px) {
+    .card-column {
+      flex: 0 0 100%;
+      max-width: 100%;
+    }
+  
